# Deep_Learning_Labs

./: .gitignore  README.md  pyproject.toml  requirements.txt
Lab1/: 1_XOR_and_OR_problem.ipynb  2_MLP_for_XOR.ipynb  3_Decysion_Boundry.ipynb  4_XOR_Logistic_dim.ipynb
Lab10/: 1_feature_permutation_toy_set.ipynb  2_Regression_toy_set_XAI.ipynb  XAI_Classification_toy_set.ipynb  XAI_toy_set.ipynb
Lab11/: 1_PyTorchLightning_INTRO.ipynb  2_Regression.ipynb
Lab11/lightning_logs/version_0/: events.out.tfevents.1781510674.mint-franio.52215.0  events.out.tfevents.1781510682.mint-franio.52215.1  hparams.yaml
Lab2/: 00_tensors.ipynb  01_Gradient_decent.ipynb  02_Torch_Modules.ipynb  model.pth
Lab3/: Dropout_regularization.ipynb  MNIST_ADAM.ipynb  MNIST_LR.ipynb  MNIST_MLP.ipynb  MNIST_SGD.ipynb
Lab4/: 2_Regression_optuna.ipynb  4_classification_architectures.ipynb  5_shapes.ipynb  MLPRegressor.py  Multilabel_classification.ipynb  Regression-part1.ipynb  Regression_optuna.ipynb
Lab5/: 1_Tensorboard.ipynb  2_Training_TenserBoard.ipynb  2_Training_TensorBoard.ipynb  3_optuna_tensorboard.ipynb  4_Other_functions_Tenosrboard.ipynb
Lab5/runs/test1/: events.out.tfevents.1776070703.mint-franio.28000.0  events.out.tfevents.1776070850.mint-franio.28000.5
Lab5/runs/test2/: events.out.tfevents.1776070703.mint-franio.28000.2  (+1 more)
Lab6_7-project/: 1_Dataset_data_cleaning_split.ipynb  2_EDA.ipynb  3_Optuna.ipynb  4_Training.ipynb  5_Evaluation.ipynb  5_Evaluation_TOP1.ipynb  5_Evaluation_TOP2.ipynb  5_Evaluation_TOP3.ipynb  6_Model_Testing.ipynb  dataset_desc.md  model_graph
Lab6_7-project/optuna_results/: trial_08_05_2026(22:53).csv  trial_24_04_2026(18:55).csv
Lab6_7-project/utils/: EDA.py  MLPClassifier.py  Predictor.py  dir_managment.py  stat_testing.py  training.py
Lab8/: 1_AudioData_Preprocessing.ipynb  2_Training.ipynb  3_Optuna.ipynb  4_Training_optimized.ipynb  5_dataset_size.ipynb  6_Transfer_Learning.ipynb  7_data_augmentation.ipynb  8_training_aug.ipynb  AudioData_Preprocessing.ipynb
Lab8/optuna_results/: trial_20_05_2026(12:08).csv
Lab8/utils/: data.py  training.py
Lab8/utils8/: AudioCNN.py  Predictor.py  augmentations.py  data.py  training.py
Lab9/: 1_toy_set.ipynb  2_ensemble_testing.ipynb  3_Wrapper.ipynb  4_real_data_calibration.ipynb
Lab_14_15-project/: 1_Data.ipynb  2_EDA.ipynb  3_hyperparameters_and_training.ipynb  4_Cal_and_Uncertanity.ipynb  5_XAI.ipynb  Cal_and_Uncertanity.ipynb
lca_courses_projects/: MyWeddingPlaner.ipynb  My_Personal_Chief.ipynb
(+7 files in other folders)
